build: bump version and fix repository URL format
Update package version from 1.0.1 to 1.0.2 for both JavaScript and TypeScript packages. Additionally, correct the repository URL format to use the "git+" prefix, which is the standard convention in package.json files.

--- a/Languages/JavaScript/package.json
+++ b/Languages/JavaScript/package.json
@@ -1,6 +1,6 @@
 {
     "name": "folio-generator-js",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "A library to generate sequential alphanumeric codes.",
     "main": "src/index.js",
     "scripts": {
@@ -16,7 +16,7 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/AnderCMD/Generador-de-folios.git"
+        "url": "git+https://github.com/AnderCMD/Generador-de-folios.git"
     },
     "files": [
         "src",
