--- a/Languages/TypeScript/package.json
+++ b/Languages/TypeScript/package.json
@@ -1,6 +1,6 @@
 {
     "name": "folio-generator-ts",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "A library to generate sequential alphanumeric codes.",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -19,7 +19,7 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/AnderCMD/Generador-de-folios.git"
+        "url": "git+https://github.com/AnderCMD/Generador-de-folios.git"
     },
     "files": [
         "dist",
